[수정 사항]
- 참여자 메인 화면 UI 개선:
  - '현재 화면 참여자' 및 '검색된 참여자 수' 표시 추가
  - select 옵션 값 all → allType으로 변경 및 관련 로직 수정

- ChatBotController:
  - 현재 시간 반환 로직 간소화 (toString() 제거)

- MemberDAO:
  - 미사용 log 주석 처리
  - update 기능 로직 추가 및 log 보완

- ParticipantController:
  - 마감 여부 기본값 지정 로직 추가
  - 검색된 참여자 수 변수 모델에 추가

- SQL 매핑:
  - 새로운 Update 및 Select 쿼리 추가
  - 로그인 정보 테이블에 디테일 필드 확장

- 기타:
  - 성공금 관련 신규 JSP (DashBoardSuccessMoneyPage.jsp) 추가
  - Excel 다운로드 파일명 인코딩 처리 방식 수정 (StandardCharsets.UTF_8 적용)
  - ApexCharts를 이용한 데이터 시각화 구현 추가